--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>Тестовое задание</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
@@ -87,7 +87,7 @@
 								<div class="col-6">
 									<div class="advantage__item" data-item="3">
 										<span class="advantage__text">
-											календарик за <p>2001<span>г.</span></p> в подарок
+											календарик за <p class="advantage__amount">2001<span>г.</span></p> в подарок
 										</span>
 									</div>
 								</div>
