--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,11 @@
 	<!-- Custom HTML -->
 
 <section class="main">
-	<nav class="main__nav">
-		<div class="logo-wrap corners">
+	<div class="mask-wrap">
+		<img src="img/mask.png" class="mask" alt="" srcset="">
+	</div>
+	<nav class="navbar navbar-expand-lg navbar-dark">
+		<div class="logo-wrap corners navbar-brand">
 			<p>
 				<!-- Для границ через before, after -->
 				<a href="#">
@@ -45,53 +48,59 @@
 				</a>
 			</p>
 		</div>
-		<ul>
-			<li><a href="#">Главная</a></li>
-			<li><a href="#">Технология</a></li>
-			<li><a href="#">График полётов</a></li>
-			<li><a href="#">Гарантии</a></li>
-			<li><a href="#">О компании</a></li>
-			<li><a href="#">Контакты</a></li>
-		</ul>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+		aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-home d-lg-none"></i>Главная</a></li>
+				<li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-flask d-lg-none"></i>Технология</a></li>
+				<li class="nav-item"><a href="#" class="nav-link"><i class="far fa-calendar-alt d-lg-none"></i>График полётов</a></li>
+				<li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-certificate d-lg-none"></i>Гарантии</a></li>
+				<li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-building d-lg-none"></i>О компании</a></li>
+				<li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-info-circle d-lg-none"></i>Контакты</a></li>
+			</ul>
+		</div>
 	</nav>
 	<div class="container-fluid">
 		<div class="content">
 			<div class="row">
-				<div class="col-6">
+				<div class="col-12 col-md-6">
 					<div class="content-left">
 						<h1>путешествие</h1>
 						<span>на красную планету</span>
 						<a href="#" class="btn main__btn">Начать путешествие</a>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-12 col-md-6">
 					<div class="content-right">
 						<div class="advantages">
 							<div class="row no-gutters">
 								<!-- Пришлось задавать data-атрибуты, т.к. итемы находятся в разных контейнерах и их
 								невозможно стилизиовать через селекторы nth- -->
-								<div class="col-6">
+								<div class="col-12 col-sm-6">
 									<div class="advantage__item" data-item="1">
 										<span class="advantage__text">
 											мы <p>1</p> на рынке
 										</span>
 									</div>
 								</div>
-								<div class="col-6">
+								<div class="col-12 col-sm-6">
 									<div class="advantage__item" data-item="2">
 										<span class="advantage__text">
 											гарантируем <p>50%</p> безопасность
 										</span>
 									</div>
 								</div>
-								<div class="col-6">
+								<div class="col-12 col-sm-6">
 									<div class="advantage__item" data-item="3">
 										<span class="advantage__text">
 											календарик за <p class="advantage__amount">2001<span>г.</span></p> в подарок
 										</span>
 									</div>
 								</div>
-								<div class="col-6">
+								<div class="col-12 col-sm-6">
 									<div class="advantage__item" data-item="4">
 										<span class="advantage__text">
 											путешествие <p>597</p> дней
